# openanalyst-studio

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Containerfile  GHActions-README.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  container.yml  release-please.yml  snyk.yml  trivy.yml
openanalyst_studio/: openanalyst.py  prompts.py
openanalyst_studio/tests/: test_analysis_tool.py  test_visualization_tool.py
openanalyst_studio/tools/: __init__.py  analysis.py  analysis_tool.py  data_processor.py  llm.py  schemas.py  visualization.py  visualization_tool.py
openanalyst_studio/utils/: logging_utils.py
